--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,6 +5,7 @@
     an open-source SDR receiver software with a web UI.
     Copyright (c) 2013-2015 by Andras Retzler <randras@sdr.hu>
     Copyright (c) 2019-2021 by Jakob Ketterl <dd5jfk@darc.de>
+    Copyright (c) 2022-2023 by Marat Fayzullin <luarvique@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as
@@ -22,7 +23,7 @@
 -->
 <html>
     <head>
-        <title>OpenWebRX | Open Source SDR Web App for Everyone!</title>
+        <title>OpenWebRX+ | Open Source SDR Web App for Everyone!</title>
         <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" sizes="16x16 32x32" />
         <link rel="icon" type="image/png" sizes="32x32" href="static/gfx/favicon32.png" />
         <link rel="icon" type="image/png" sizes="44x44" href="static/gfx/favicon44.png" />
@@ -146,7 +147,7 @@
                         <div class="nano-content">
                             <div id="openwebrx-client-log-title">OpenWebRX client log</div>
                             <div>
-                                Author contact: <a href="http://www.justjakob.de/" target="_blank">Jakob Ketterl, DD5JFK</a> |
+                                Author contact: <a href="http://fms.komkon.org/" target="_blank">Marat Fayzullin</a> |
                                 <a href="https://www.openwebrx.de" target="_blank">OpenWebRX homepage</a>
                             </div>
                             <div>Support and information: <a href="https://groups.io/g/openwebrx" target="_blank">Groups.io Mailinglist</a></div>
