--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -145,7 +145,7 @@
                 <div class="openwebrx-panel" id="openwebrx-panel-log" data-panel-name="debug" style="width: 619px;">
                     <div class="openwebrx-panel-inner nano" id="openwebrx-log-scroll">
                         <div class="nano-content">
-                            <div id="openwebrx-client-log-title">OpenWebRX client log</div>
+                            <div id="openwebrx-client-log-title">OpenWebRX+ client log</div>
                             <div>
                                 Author contact: <a href="http://fms.komkon.org/" target="_blank">Marat Fayzullin</a> |
                                 <a href="https://www.openwebrx.de" target="_blank">OpenWebRX homepage</a>
