--- a/htdocs/map.html
+++ b/htdocs/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>OpenWebRX Map</title>
+    <title>OpenWebRX+ Map</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#222" />
