Added more details to the policy.

--- a/htdocs/policy.html
+++ b/htdocs/policy.html
@@ -12,8 +12,13 @@ ${header}
 <div style="margin: 20% 20% 20% 20%;">
 <h1 style="color:#ff0000;">OpenWebRX+ Usage Policy</h1>
 <h3 style="text-align:justify;">
-Please, do not leave the receiver unattended for prolonged time. The receiver
-will stop after a while to allow other users to connect.
+Please, do not leave the receiver unattended for prolonged time. The
+receiver will stop after a while to allow other users to connect.
+Consider visiting other receivers around the world:
+</h3>
+<h3 style="margin-top:5%;">
+<span style="float:left;"><a href="http://rx.linkfanel.net/">Linkfanel</a></span>
+<span style="float:right;"><a href="https://www.receiverbook.de/map">Receiverbook</a></span>
 </h3>
 </div>
 </body>
