Added 9kHz step, now updating step when profile changes.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -198,6 +198,7 @@
                             <option value="3000">3kHz</option>
                             <option value="5000">5kHz</option>
                             <option value="6000">6kHz</option>
+                            <option value="9000">9kHz</option>
                             <option value="10000">10kHz</option>
                             <option value="12000">12kHz</option>
                             <option value="50000">50kHz</option>
