Bigger tuning buttons.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -45,10 +45,10 @@
     <div class="openwebrx-waterfall-container">
         <div id="openwebrx-frequency-container">
             <div id="openwebrx-bookmarks-container" style="z-index:2;">
-                <div class="openwebrx-button openwebrx-round-button-small openwebrx-tune-button" style="position:absolute;top:50%;left:0;" title="Tune down" onclick="tuneBySteps(-1);">
+                <div class="openwebrx-button openwebrx-round-button openwebrx-tune-button" style="position:absolute;top:30%;left:0;z-index:3;" title="Tune down" onclick="tuneBySteps(-1);">
                     <svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#left"></use></svg>
                 </div>
-                <div class="openwebrx-button openwebrx-round-button-small openwebrx-tune-button" style="position:absolute;top:50%;right:0;" title="Tune up" onclick="tuneBySteps(1);">
+                <div class="openwebrx-button openwebrx-round-button openwebrx-tune-button" style="position:absolute;top:30%;right:0;z-index:3;" title="Tune up" onclick="tuneBySteps(1);">
                     <svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#right"></use></svg>
                 </div>
             </div>
