--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -238,12 +238,13 @@
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomOutOneStep();" title="Zoom out one step"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-out"></use></svg></div>
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomInTotal();"  title="Zoom in totally"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-in-total"></use></svg></div>
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomOutTotal();" title="Zoom out totally"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-out-total"></use></svg></div>
-                        <div id="openwebrx-smeter-db">0 dB</div>
+                        <div class="openwebrx-button openwebrx-square-button openwebrx-record-button" onclick="toggleRecording();" title="Record audio">REC</div>
                     </div>
                     <div class="openwebrx-panel-line">
                         <div id="openwebrx-smeter">
                             <div class="openwebrx-smeter-bar"></div>
                         </div>
+                        <div id="openwebrx-smeter-db">0 dB</div>
                     </div>
                 </div>
             </div>
