--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,6 +64,7 @@
         <div id="openwebrx-panels-container">
             <div id="openwebrx-panels-container-left">
                 <div class="openwebrx-panel openwebrx-message-panel" id="openwebrx-panel-sstv-message" style="display: none; width: 619px;" data-panel-name="sstv-message"></div>
+                <div class="openwebrx-panel openwebrx-message-panel" id="openwebrx-panel-fax-message" style="display: none; width: 619px;" data-panel-name="fax-message"></div>
                 <div class="openwebrx-panel" id="openwebrx-panel-digimodes" style="display: none; width: 619px;" data-panel-name="digimodes">
                     <div id="openwebrx-digimode-canvas-container">
                         <div id="openwebrx-digimode-select-channel"></div>
