Adding modular spectrum display.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,6 +43,9 @@
 <div id="webrx-page-container">
     ${header}
     <div class="openwebrx-waterfall-container">
+        <div id="openwebrx-spectrum-container">
+            <canvas id="openwebrx-spectrum-canvas" width="0" height="0"></canvas>
+        </div>
         <div id="openwebrx-frequency-container">
             <div id="openwebrx-bookmarks-container" style="z-index:2;">
                 <div class="openwebrx-button openwebrx-round-button openwebrx-tune-button" style="position:absolute;top:30%;left:0;z-index:3;" title="Tune down" onclick="tuneBySteps(-1);">
