--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -55,9 +55,13 @@
             <div id="openwebrx-scale-container" style="z-index:1;">
                 <canvas id="openwebrx-scale-canvas" width="0" height="0"></canvas>
             </div>
-            <div id="openwebrx-spectrum-container">
+            <div class="openwebrx-spectrum-container">
                 <canvas id="openwebrx-spectrum-canvas" width="0" height="0"></canvas>
             </div>
+            <a class="openwebrx-rx-details-arrow openwebrx-rx-details-arrow--down openwebrx-photo-trigger">
+                <svg class="down" viewBox="0 0 43 12"><use xlink:href="static/gfx/svg-defs.svg#rx-details-arrow-down"></use></svg>
+                <svg class="up" viewBox="0 0 43 12"><use xlink:href="static/gfx/svg-defs.svg#rx-details-arrow-up"></use></svg>
+            </a>
         </div>
         <div id="webrx-canvas-background">
             <div id="webrx-canvas-container">
@@ -241,6 +245,7 @@
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomOutOneStep();" title="Zoom out one step"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-out"></use></svg></div>
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomInTotal();"  title="Zoom in totally"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-in-total"></use></svg></div>
                         <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomOutTotal();" title="Zoom out totally"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-out-total"></use></svg></div>
+                        <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="toggleSpectrum();" title="Zoom out totally"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-out-total"></use></svg></div>
                         <div class="openwebrx-button openwebrx-square-button openwebrx-record-button" onclick="toggleRecording();" title="Record audio">REC</div>
                     </div>
                     <div class="openwebrx-panel-line">
