Changed start message to "Start OpenWebRX+".

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -274,7 +274,7 @@
     <div id="openwebrx-autoplay-overlay" class="openwebrx-overlay" style="display:none;">
         <div class="overlay-content">
             <svg viewBox="0 0 700 700"><use xlink:href="static/gfx/svg-defs.svg#play-button"></use></svg>
-            <div>Start OpenWebRX</div>
+            <div>Start OpenWebRX+</div>
         </div>
     </div>
     <div id="openwebrx-dialog-bookmark" class="openwebrx-dialog" style="display:none;">
